Updated plot function to properly handleplotting
Bugfixing on time interpolation

Fixed sigma interpolation bug in plasmid setting

--- a/notebooks/plot_julia_example.ipynb
+++ b/notebooks/plot_julia_example.ipynb
@@ -50,7 +50,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "examples=f['tangles_full_run.001841']\r\n",
+    "examples=f['tangles_full_run.001120']\r\n",
     "print(examples.keys())\r\n",
     "print(examples.attrs.keys())\r\n",
     "print(examples.attrs['comment'])\r\n",
@@ -113,7 +113,7 @@
     "        'mRNA': data_group['mRNA'][:,idx-1]\r\n",
     "    }\r\n",
     "\r\n",
-    "def gen_animation(data_group, gene_colors, filename, n_frames):\r\n",
+    "def gen_animation(data_group, gene_colors, filename, n_frames, tspan=None):\r\n",
     "    is_circular = data_group.attrs['bcs.is_circular'] == 1.0\r\n",
     "\r\n",
     "    genes = list(zip(data_group.attrs['gene.start'], data_group.attrs['gene.end']))\r\n",
@@ -121,10 +121,11 @@
     "    times = np.array(data_group['time'])\r\n",
     "    mRNA_data = np.array(data_group['mRNA'])\r\n",
     "    #max_time = max(data_group['time'])\r\n",
-    "    max_time = 200\r\n",
+    "    if tspan is None:\r\n",
+    "        tspan = (0, max(data_group['time']))\r\n",
     "    max_length = data_group.attrs['bcs.length']\r\n",
     "    max_gene_length = max([abs(gene[1] - gene[0]) for gene in genes])\r\n",
-    "    to_theta = lambda x: np.pi / 2 -2*np.pi * x / max_length\r\n",
+    "    to_theta = lambda x: 2*np.pi * x / max_length\r\n",
     "\r\n",
     "    fig = plt.figure(figsize=(1920 / 300,1000 / 300))\r\n",
     "    ax1 = plt.subplot(1, 3, (1, 2), polar=True) if is_circular else plt.subplot(1, 3, (1,2))\r\n",
@@ -140,11 +141,12 @@
     "        ax1.set_xlabel('Distance (nm)')\r\n",
     "    else:\r\n",
     "        ax1.tick_params(left=False, labelleft=False, bottom=False, labelbottom=False)\r\n",
-    "        ax1.set_rmax(3)\r\n",
+    "        ax1.set_ylim(0,2)\r\n",
+    "        #ax1.set_rmax(3)\r\n",
     "        ax1.grid(False)\r\n",
     "        ax1.spines['polar'].set_visible(False)\r\n",
     "\r\n",
-    "    ax2.set_xlim([0, max_time])\r\n",
+    "    ax2.set_xlim(tspan)\r\n",
     "    ax2.set_ylim([0,np.max(data_group['mRNA'])])\r\n",
     "    ax2.spines['top'].set_visible(False)\r\n",
     "    ax2.spines['right'].set_visible(False)\r\n",
@@ -152,16 +154,15 @@
     "    ax2.set_ylabel('# mRNAs')\r\n",
     "\r\n",
     "    gene_lines = [ax2.plot([], [], color=color)[0] for gene, color in zip(genes, gene_colors)]\r\n",
-    "    print(genes)\r\n",
     "\r\n",
     "    polymerases = ax1.plot([], [], 'ko')[0]\r\n",
     "\r\n",
     "    if is_circular:\r\n",
-    "        ax1.plot(np.linspace(0, 2 * np.pi, 50), np.linspace(1,1,50), linewidth=14, zorder=0, color='0.8', solid_capstyle='butt')\r\n",
-    "        gene_plots = [ax1.plot(np.linspace(to_theta(gene[0]), to_theta(gene[1]), 50), np.linspace(1,1,50), linewidth=14, zorder=0, color=color, solid_capstyle='butt')[0] for gene, color in zip(genes, gene_colors)]\r\n",
+    "        gene_plots = [ax1.plot(np.linspace(to_theta(gene[0]), to_theta(gene[1]), 50), np.linspace(1,1,50), linewidth=8, zorder=0, color=color)[0] for gene, color in zip(genes, gene_colors)]\r\n",
+    "        ax1.plot(np.linspace(0, 2 * np.pi, 50), np.linspace(1,1,50), linewidth=4, zorder=0, color=plt.cm.coolwarm(0.5), solid_capstyle='butt')\r\n",
     "    else:\r\n",
-    "        ax1.plot([0, max_length], [0, 0], color='0.8', linewidth=14, zorder=0, solid_capstyle='butt')\r\n",
     "        gene_plots = [ax1.plot(gene, [0, 0], color=color,linewidth=14, zorder=0, solid_capstyle='butt')[0] for gene, color in zip(genes, gene_colors)]\r\n",
+    "        ax1.plot([0, max_length], [0, 0], color=plt.cm.coolwarm(0.5), linewidth=8, zorder=0, solid_capstyle='butt')\r\n",
     "\r\n",
     "    main_line = LineCollection([], cmap=plt.cm.coolwarm, norm=plt.Normalize(-.2,.2))\r\n",
     "    mRNA_lines = LineCollection([], colors='k')\r\n",
@@ -178,13 +179,14 @@
     "        return (*gene_plots, main_line, mRNA_lines)\r\n",
     "    \r\n",
     "    def animate(i):\r\n",
-    "        frame_vals = interpolate(data_group, max_time * i / n_frames)\r\n",
+    "        t = tspan[0] + (tspan[1] - tspan[0]) * (i / n_frames)\r\n",
+    "        frame_vals = interpolate(data_group, t)\r\n",
     "        n_polymerases = np.sum(frame_vals['rnap_location'] >= 0)\r\n",
     "\r\n",
     "        # Plot mRNA data values\r\n",
     "\r\n",
     "        # Plot mRNA values (on the right-hand plot)\r\n",
-    "        gene_time_mask = (times < (max_time * i / n_frames))\r\n",
+    "        gene_time_mask = (times < t)\r\n",
     "        for i, gene_line in enumerate(gene_lines):\r\n",
     "            gene_line.set_data(times[gene_time_mask], mRNA_data[i,gene_time_mask])\r\n",
     "\r\n",
@@ -198,20 +200,25 @@
     "            if is_circular:\r\n",
     "                # Simulate circular boundary conditions\r\n",
     "                rnap_locs = np.concatenate((\r\n",
-    "                    np.ones(1,) * (frame_vals['rnap_location'][n_polymerases - 1] - max_length),\r\n",
+    "                    np.ones(1,) * (frame_vals['rnap_location'][max(0,n_polymerases - 1)] - max_length),\r\n",
     "                    frame_vals['rnap_location'][:n_polymerases],\r\n",
     "                    np.ones(1,) * (max_length + frame_vals['rnap_location'][0])\r\n",
     "                ))\r\n",
     "                phi = np.concatenate((\r\n",
-    "                    np.ones(1,) * frame_vals['phi'][n_polymerases - 1],\r\n",
+    "                    np.ones(1,) * frame_vals['phi'][max(0,n_polymerases - 1)],\r\n",
     "                    frame_vals['phi'][:n_polymerases],\r\n",
     "                    np.ones(1,) * frame_vals['phi'][0]\r\n",
     "                ))\r\n",
     "                sigma = np.diff(phi) / np.diff(rnap_locs) / -1.85\r\n",
     "\r\n",
+    "\r\n",
     "                theta_rnap = to_theta(rnap_locs)\r\n",
-    "                theta_interp = np.linspace(0, max_length, 200)\r\n",
-    "                sigma_interp = np.interp(theta_interp, theta_rnap[:-1], sigma)\r\n",
+    "                theta_interp = np.linspace(0, 2 * np.pi, 200)\r\n",
+    "                sigma_interp = np.interp(theta_interp,\r\n",
+    "                    np.concatenate((\r\n",
+    "                        np.array([theta_rnap[1]]),\r\n",
+    "                        theta_rnap[1:-2],\r\n",
+    "                        np.array([theta_rnap[-2]]))), sigma)\r\n",
     "                points = np.array([theta_interp, np.ones(theta_interp.shape) * 1]).T.reshape(-1,1,2)\r\n",
     "                segments = np.concatenate([points[:-1], points[1:]], axis=1)\r\n",
     "                main_line.set_segments(segments)\r\n",
@@ -222,7 +229,6 @@
     "                mRNA_segments = np.concatenate([mRNA_base, mRNA_tail], axis=1)\r\n",
     "                mRNA_lines.set_segments(mRNA_segments)\r\n",
     "            else:\r\n",
-    "\r\n",
     "                rnap_locs = np.concatenate((\r\n",
     "                    np.zeros(1,),\r\n",
     "                    frame_vals['rnap_location'][:n_polymerases],\r\n",
@@ -244,13 +250,64 @@
     "                mRNA_tail = np.array([rnap_locs[1:-1], frame_vals['mRNA_length'][:n_polymerases]]).T.reshape(-1,1,2)\r\n",
     "                mRNA_segments = np.concatenate([mRNA_base, mRNA_tail], axis=1)\r\n",
     "                mRNA_lines.set_segments(mRNA_segments)\r\n",
-    "\r\n",
-    "\r\n",
-    "            \r\n",
     "        return main_line, polymerases, mRNA_lines, *gene_lines\r\n",
     "    anim = animation.FuncAnimation(fig, animate, init_func=init, frames=n_frames, interval=33, blit=True)\r\n",
-    "    anim.save(filename, dpi=300, writer=ffmpeg_writer, progress_callback= lambda i,n: print(f'Saving frame {i} of {n}') if i % 25 == 0 else None)\r\n",
-    "gen_animation(examples, ['#808080', '#A58245'], '../output/test_out.mp4', 50)"
+    "    anim.save(filename, dpi=300, writer=ffmpeg_writer, progress_callback= lambda i,n: print(f'Saving frame {i} of {n}') if i % 250 == 0 else None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for run in f:\r\n",
+    "    cur_run = f[run]\r\n",
+    "    if cur_run.attrs['rates.sc_dependent'] != 1.0:\r\n",
+    "        continue\r\n",
+    "    if cur_run.attrs['comment'].decode('utf8') != '2_gene.divergent':\r\n",
+    "        continue\r\n",
+    "    if cur_run.attrs['bcs.is_circular'] != 1:\r\n",
+    "        continue\r\n",
+    "    if not np.isclose(cur_run.attrs['gene.base_rate'][0], 0.00624912):\r\n",
+    "        continue\r\n",
+    "    print(run)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gen_animation(f['tangles_full_run.001151'], ['#808080', '#A58245'], '../output/divergent_plasmid_closeup.mp4', 1000, (6800,7200))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gen_animation(f['tangles_full_run.001151'], ['#808080', '#A58245'], '../output/divergent_plasmid.mp4', 500, (5000,10000))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gen_animation(f['tangles_full_run.001749'], ['#808080', '#A58245'], '../output/convergent.mp4', 1000, (7000,7100))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gen_animation(f['tangles_full_run.000246'], ['#808080', '#A58245'], '../output/convergent_linear_switch.mp4', 4000, (0, 7000))"
    ]
   },
   {
