--- a/notebooks/plot_julia_example.ipynb
+++ b/notebooks/plot_julia_example.ipynb
@@ -12,11 +12,11 @@
     "import numpy as np\r\n",
     "import h5py\r\n",
     "\r\n",
-    "plt.rcParams['animation.ffmpeg_path'] = r'C:\\Users\\Christopher\\Downloads\\ffmpeg-n4.4-6-g7e9b9f24df-win64-gpl-4.4\\ffmpeg-n4.4-6-g7e9b9f24df-win64-gpl-4.4\\bin\\ffmpeg.exe'\r\n",
+    "plt.rcParams['animation.ffmpeg_path'] = r'C:\\Users\\ChemeGrad2019\\Downloads\\ffmpeg-2020-12-09-git-7777e5119a-full_build\\bin\\ffmpeg.exe'\r\n",
     "plt.rcParams['font.family'] = 'sans-serif'\r\n",
     "plt.rcParams['font.sans-serif'] = 'Helvetica Neue'\r\n",
     "#sns.set_context('talk',rc={'font.family': 'sans-serif', 'font.sans-serif':['Helvetica Neue']})\r\n",
-    "ffmpeg_writer = animation.FFMpegWriter(fps=30, codec='libx265', extra_args=['-crf', '18'])"
+    "ffmpeg_writer = animation.FFMpegWriter(fps=30, codec='libx265', extra_args=['-crf', '18', '-pix_fmt', 'yuv420p'])"
    ]
   },
   {
@@ -250,7 +250,7 @@
     "                mRNA_tail = np.array([rnap_locs[1:-1], frame_vals['mRNA_length'][:n_polymerases]]).T.reshape(-1,1,2)\r\n",
     "                mRNA_segments = np.concatenate([mRNA_base, mRNA_tail], axis=1)\r\n",
     "                mRNA_lines.set_segments(mRNA_segments)\r\n",
-    "        return main_line, polymerases, mRNA_lines, *gene_lines\r\n",
+    "        return [main_line, polymerases, mRNA_lines] + list(gene_lines)\r\n",
     "    anim = animation.FuncAnimation(fig, animate, init_func=init, frames=n_frames, interval=33, blit=True)\r\n",
     "    anim.save(filename, dpi=300, writer=ffmpeg_writer, progress_callback= lambda i,n: print(f'Saving frame {i} of {n}') if i % 250 == 0 else None)"
    ]
@@ -265,11 +265,11 @@
     "    cur_run = f[run]\r\n",
     "    if cur_run.attrs['rates.sc_dependent'] != 1.0:\r\n",
     "        continue\r\n",
-    "    if cur_run.attrs['comment'].decode('utf8') != '2_gene.divergent':\r\n",
+    "    if cur_run.attrs['comment'].decode('utf8') != '2_gene.tandem':\r\n",
     "        continue\r\n",
     "    if cur_run.attrs['bcs.is_circular'] != 1:\r\n",
     "        continue\r\n",
-    "    if not np.isclose(cur_run.attrs['gene.base_rate'][0], 0.00624912):\r\n",
+    "    if not np.isclose(cur_run.attrs['gene.base_rate'][0], 0.00035141):\r\n",
     "        continue\r\n",
     "    print(run)"
    ]
@@ -280,33 +280,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gen_animation(f['tangles_full_run.001151'], ['#808080', '#A58245'], '../output/divergent_plasmid_closeup.mp4', 1000, (6800,7200))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gen_animation(f['tangles_full_run.001151'], ['#808080', '#A58245'], '../output/divergent_plasmid.mp4', 500, (5000,10000))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gen_animation(f['tangles_full_run.001749'], ['#808080', '#A58245'], '../output/convergent.mp4', 1000, (7000,7100))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "gen_animation(f['tangles_full_run.001151'], ['#808080', '#A58245'], '../output/divergent_plasmid_closeup.mp4', 1000, (6800,7200))\r\n",
+    "gen_animation(f['tangles_full_run.001151'], ['#808080', '#A58245'], '../output/divergent_plasmid.mp4', 2000, (5000,10000))\r\n",
+    "gen_animation(f['tangles_full_run.001749'], ['#808080', '#A58245'], '../output/convergent_plasmid.mp4', 2000, (6000,8000))\r\n",
+    "gen_animation(f['tangles_full_run.001744'], ['#808080', '#A58245'], '../output/tandem_plasmid.mp4', 2000, (3000, 6000))\r\n",
     "gen_animation(f['tangles_full_run.000246'], ['#808080', '#A58245'], '../output/convergent_linear_switch.mp4', 4000, (0, 7000))"
    ]
   },
@@ -316,31 +293,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "   fig, axs = plt.subplots(1, 2, figsize=(10, 3), gridspec_kw={'width_ratios': [2, 1]})\n",
-    "       \n",
-    "    # Locate which raw segment this frame is in\n",
-    "    lookup_results =  np.where([np.any(r[0] <= time) & np.any(r[0] >= time) for r in run_result['raw']])\n",
-    "       \n",
-    "    excess_twist = multi_interp(time, run_result['time'], run_result['excess_twist'])\n",
-    "    sc_density = multi_interp(time, run_result['time'], run_result['sc_density'])\n",
-    "\n",
-    "    x_domain = run_result['x_domain']\n",
-    "        \n",
-    "    # Plot genes\n",
-    "    for gene in genes:\n",
-    "        axs[0].plot([gene[0], gene[1]], [0, 0],\n",
-    "                linewidth=20, alpha=.5, zorder=1)\n",
-    "\n",
-    "    # Plot DNA segments\n",
-    "    domain_points = np.array([x_domain, np.zeros(x_domain.shape)]).T.reshape(-1,1,2)\n",
-    "    segments = np.concatenate([domain_points[:-1], domain_points[1:]], axis=1)\n",
-    "    max_excursion = np.max(np.abs([np.min(run_result['sc_density']), np.max(run_result['sc_density'])]))\n",
-    "    cmap_norm = plt.Normalize(-.125, .125)\n",
-    "    dna_segments = LineCollection(segments, cmap='Spectral', norm=cmap_norm)\n",
-    "    dna_segments.set_array(sc_density)\n",
-    "    dna_segments.set_linewidth(8)\n",
-    "    line = axs[0].add_collection(dna_segments)\n",
-    "    fig.colorbar(line, ax=axs[0])"
+    "gen_animation(f['tangles_full_run.001151'], ['#808080', '#A58245'], '../output/divergent_plasmid_slowmo.mp4', 4000, (7000,7200))"
    ]
   },
   {
@@ -349,26 +302,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, ax = plt.subplots(figsize=(16,9))\n",
-    "ax.plot([1,2],[3,4], 'ko')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(examples['phi'][:, 180])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(examples.keys())"
+    "gen_animation(f['tangles_full_run.002285'], ['#808080', '#A58245'], '../output/tandem_relative_Rates.mp4', 250)"
    ]
   },
   {
@@ -381,10 +315,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "35596c0d4d50b3cf51088ffaabe9a8701552f7de3deccc6f17efae06fe0a22a4"
+   "hash": "633f1c1c8320b313f5f886b41bd1fdc446650904a8aae9c7ea4880a02892af16"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.4 64-bit ('env': venv)",
+   "display_name": "Python 3.7.4 64-bit ('env': venv)",
    "name": "python3"
   },
   "language_info": {
@@ -397,7 +331,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.4"
+   "version": "3.7.4"
   },
   "metadata": {
    "interpreter": {
