Unify comparison plot with previously generated Tangles plots

--- a/notebooks/t2.0_julia_summaries.ipynb
+++ b/notebooks/t2.0_julia_summaries.ipynb
@@ -160,9 +160,21 @@
     "for sc in [1.0, 0.0]:\r\n",
     "    plot_df = simulation_df.copy()\r\n",
     "    plot_df = plot_df[(plot_df['topo_rate'] == min(plot_df['topo_rate'])) & (plot_df['is_plasmid'] == 0)  & (plot_df['induction'] < 0.008) & (plot_df['sc_dependent'] == sc)]\r\n",
+    "    plot_df = plot_df.dropna()\r\n",
+    "    # Normalize by the max value at induction = 0\r\n",
+    "    plot_df['mRuby2'] /= np.mean(plot_df[plot_df['induction'] < 0.000084]['mRuby2'])\r\n",
+    "    plot_df['induction'] /= np.max(plot_df['induction'])\r\n",
     "    #plot_df.groupby(['condition', 'induction']).mean().reset_index()\r\n",
-    "    sns.lineplot(data=plot_df, x='induction', y='mRuby2', hue='condition', palette=main_condition_palette, hue_order=[x for x in plot_order if x.startswith('2_gene')])\r\n",
-    "    plt.gca().legend_.set_bbox_to_anchor((1.7, .9))\r\n",
+    "    sns.lineplot(data=plot_df, x='induction', y='mRuby2', hue='condition', ci=\"sd\", linewidth=5, palette=main_condition_palette, hue_order=[x for x in plot_order if x.startswith('2_gene')])\r\n",
+    "    plt.ylabel('Reporter output')\r\n",
+    "    plt.xlabel('Induction level') \r\n",
+    "    plt.rcParams.update({'font.family': 'Arial', 'font.size': 16})\r\n",
+    "    plt.legend(['Tandem', 'Divergent', 'Convergent'], loc='upper center')\r\n",
+    "    plt.gca().grid(False)\r\n",
+    "    plt.tick_params(axis='both', which='both', bottom=True, top=False, labelbottom=True, right=False, left=True, labelleft=True) \r\n",
+    "    plt.xlim([0,1])\r\n",
+    "    plt.ylim([0,1.4])\r\n",
+    "    plt.gca().legend_.set_bbox_to_anchor((1.25, .9))\r\n",
     "    plt.savefig('../img/t2.0/sim_compare_{}.svg'.format(sc), bbox_inches='tight')\r\n",
     "    plt.show()"
    ]
@@ -298,7 +310,7 @@
    "hash": "35596c0d4d50b3cf51088ffaabe9a8701552f7de3deccc6f17efae06fe0a22a4"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.4  ('env': venv)",
+   "display_name": "Python 3.9.4 64-bit ('env': venv)",
    "name": "python3"
   },
   "language_info": {
