--- a/notebooks/TMP_qPCR.ipynb
+++ b/notebooks/TMP_qPCR.ipynb
@@ -21,7 +21,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mapping = plate_specification.well_mapping({\r\n",
+    "primer_validate_mapping = plate_specification.well_mapping({\r\n",
     "    'hActB-r1': 'A1-E1',\r\n",
     "    'hActB-r2': 'A2-E2',\r\n",
     "    'hGADPH-r1': 'A3-E3',\r\n",
@@ -53,22 +53,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "primerset = []\r\n",
-    "sample = []\r\n",
-    "cts = []\r\n",
-    "with open('../data/TMP_qPCR/2021-07-16-TMP_primer_validation.txt', 'r') as ct_file:\r\n",
-    "    # Ignore first line\r\n",
-    "    next(ct_file)\r\n",
-    "    ct_csv = csv.DictReader(ct_file, dialect='excel-tab')\r\n",
-    "    for line in ct_csv:\r\n",
-    "        if line['Pos'] not in mapping or len(line['Cp']) == 0:\r\n",
-    "            continue\r\n",
-    "        full_sample = mapping[line['Pos']]\r\n",
-    "        tokenized_sample = full_sample.split('.')\r\n",
-    "        primerset.append(tokenized_sample[0])\r\n",
-    "        sample.append(tokenized_sample[1])\r\n",
-    "        cts.append(float(line['Cp']))\r\n",
-    "df = pd.DataFrame(data={'primerset':primerset, 'sample':sample, 'Ct':cts})"
+    "def map_qPCR_data(file, mapping, token_names=['primerset', 'sample']):\r\n",
+    "    tokens = [[] for _ in range(len(token_names))]\r\n",
+    "    cts = []\r\n",
+    "    with open(file, 'r') as ct_file:\r\n",
+    "        # Ignore first line\r\n",
+    "        next(ct_file)\r\n",
+    "        ct_csv = csv.DictReader(ct_file, dialect='excel-tab')\r\n",
+    "        for line in ct_csv:\r\n",
+    "            if line['Pos'] not in mapping or len(line['Cp']) == 0:\r\n",
+    "                continue\r\n",
+    "            full_sample = mapping[line['Pos']]\r\n",
+    "            tokenized_sample = full_sample.split('.')\r\n",
+    "            while len(tokenized_sample) < len(token_names):\r\n",
+    "                tokenized_sample.append('')\r\n",
+    "            for id, token in enumerate(tokenized_sample):\r\n",
+    "                tokens[id].append(token)\r\n",
+    "            cts.append(float(line['Cp']))\r\n",
+    "    data = {k:v for k,v in zip(token_names, tokens)}\r\n",
+    "    data.update({'Ct':cts})\r\n",
+    "    return pd.DataFrame(data=data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "validation_df = map_qPCR_data('../data/TMP_qPCR/2021-07-16-TMP_primer_validation.txt', primer_validate_mapping)"
    ]
   },
   {
@@ -78,9 +91,178 @@
    "outputs": [],
    "source": [
     "plt.figure(figsize=(20,5))\r\n",
-    "sns.barplot(x='primerset', y='Ct', hue='sample', data=df)\r\n",
+    "sns.barplot(x='primerset', y='Ct', hue='sample', data=validation_df)\r\n",
     "plt.savefig('../img/qPCR_controls.pdf')\r\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pre_exo_mapping = plate_specification.well_mapping({\r\n",
+    "    'hActB': 'A1-B12,C1-C9',\r\n",
+    "    'BB-1': 'D1-E12,F1-F9,G1',\r\n",
+    "    'water': 'A1,D1,G1',\r\n",
+    "    'direct_PEI': 'A2,D2',\r\n",
+    "    'direct_tandem': 'A3-A5,D3-D5',\r\n",
+    "    'direct_convergent': 'A6,D6',\r\n",
+    "    'direct_divergent': 'A7,D7',\r\n",
+    "    '-UV_PEI': 'A8,D8',\r\n",
+    "    'PEI': 'A9,D9',\r\n",
+    "    '-UV_tandem': 'A10-A11,D10-D11',\r\n",
+    "    'tandem': 'A12,B1-B5,D12,E1-E5',\r\n",
+    "    '-UV_convergent': 'B6-B7,E6-E7',\r\n",
+    "    'convergent': 'B8-B12,C1,E8-E12,F1',\r\n",
+    "    '-UV_divergent': 'C2-C3,F2-F3',\r\n",
+    "    'divergent': 'C4-C9,F4-F9',\r\n",
+    "    '-dox': 'A10,A12,B1-B2,B6,B8-B10,C2,C4-C6,D10,D12,E1-E2,E6,E8-E10,F2,F4-F6',\r\n",
+    "    '+dox': 'A11,B3-B5,B7,B11-B12,C1,C3,C7-C9,D11,E3-E5,E7,E11-E12,F1,F3,F7-F9',\r\n",
+    "    'R1': 'A3,A10-A12,B3,B6-B8,B11,C2-C4,C7,D3,D10-D12,E3,E6-E8,E11,F2-F4,F7',\r\n",
+    "    'R2': 'A4,B1,B4,B9,B12,C5,C8,D4,E1,E4,E9,E12,F5,F8',\r\n",
+    "    'R3': 'A5,B2,B5,B10,C1,C6,C9,D5,E2,E5,E10,F1,F6,F9'\r\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "exo_norm_df = map_qPCR_data('../data/TMP_qPCR/2021-07-22-pre_exo_normalization.txt', pre_exo_mapping, ['primerset', 'sample', 'dox', 'replicate'])\r\n",
+    "exo_norm_df['condition'] = exo_norm_df['sample'] + '.' + exo_norm_df['dox'] + '.'\r\n",
+    "exp_only = exo_norm_df[(exo_norm_df['sample'] != 'water') & (~exo_norm_df['condition'].str.endswith('PEI..'))]\r\n",
+    "cross_df = exp_only.pivot(index=['condition','replicate'], columns='primerset', values='Ct')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(30,5))\r\n",
+    "sns.scatterplot(x='condition', y='Ct', hue='primerset', data=exo_norm_df)\r\n",
+    "plt.show()\r\n",
+    "plt.figure(figsize=(5,5))\r\n",
+    "sns.scatterplot(x='replicate', y='Ct', hue='primerset', data=exo_norm_df[exo_norm_df['condition']=='tandem.-dox.'])\r\n",
+    "plt.show()\r\n",
+    "plt.figure()\r\n",
+    "sns.scatterplot(x='hActB', y='BB-1', data=cross_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cross_df['dilution_factor'] = np.exp2(cross_df['hActB']- 19.24)\r\n",
+    "cross_df['uL water'] = 100.0 * (1.0 - cross_df['dilution_factor'])\r\n",
+    "cross_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "divergent_test_mapping = plate_specification.well_mapping({\r\n",
+    "    'hActB': 'B2-B10,E2-E7,H2-H10,K2-K8',\r\n",
+    "    'BB-1':  'C2-C10,F2-F7,I2-I10,L2-L8',\r\n",
+    "    'interstitial-1': 'D2-D10,G2-G7,J2-J10,M2-M8',\r\n",
+    "    'direct-Divergent': 'B2-D4,H2-J4',\r\n",
+    "    '-UV-Divergent': 'B5-D10,H5-J10',\r\n",
+    "    'Divergent': 'E2-G7,K2-M7',\r\n",
+    "    '-Dox': 'B2-D7,E2-G4,H2-J7,K2-M4',\r\n",
+    "    '+Dox': 'B8-D10,E5-G7,H8-J10,K5-M7',\r\n",
+    "    'water': 'K8-M8',\r\n",
+    "    '-exo': 'B2-D10,E2-G7',\r\n",
+    "    '+exo': 'H2-J10,K2-M7'\r\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "div_test_data = map_qPCR_data('../data/TMP_qPCR/2021.07.16-Divergent-TMP.txt', divergent_test_mapping, ['primerset', 'sample', 'dox', 'exo'])\r\n",
+    "div_test_data['full_condition'] = div_test_data['sample'] + '.' + div_test_data['dox'] + '.' + div_test_data['exo']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(35,5))\r\n",
+    "sns.barplot(x='full_condition', y='Ct', hue='primerset', data=div_test_data)\r\n",
+    "plt.savefig('../img/pre_normalize.pdf')\r\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "normed_div_data = div_test_data.copy().groupby(['sample','dox','exo','primerset']).median()\r\n",
+    "average_exo_reduction = normed_div_data.xs('+exo', level='exo')['Ct'] - normed_div_data.xs('-exo', level='exo')['Ct']\r\n",
+    "# Use the -exo condition with the backbone primer to normalize for plasmid concentration. Adjust all Ct's accordingly.\r\n",
+    "normed_div_data['normed_Ct'] = normed_div_data['Ct'] - normed_div_data.xs('-exo', level='exo').xs('BB-1', level='primerset')['Ct']\r\n",
+    "dox_changes = normed_div_data.xs('+Dox', level='dox')['normed_Ct'] - normed_div_data.xs('-Dox', level='dox')['normed_Ct']\r\n",
+    "normed_div_data = normed_div_data.reset_index()\r\n",
+    "normed_div_data['full_condition'] = normed_div_data['sample'] + '.' + normed_div_data['dox'] + '.' + normed_div_data['exo']\r\n",
+    "print(f'Average exo fold reduction: {2**average_exo_reduction.mean():.2f}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dox_changes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(35,5))\r\n",
+    "sns.barplot(x='full_condition', y='normed_Ct', hue='primerset', data=normed_div_data.dropna())\r\n",
+    "plt.savefig('../img/all_normed_primers.pdf')\r\n",
+    "plt.show() "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(35,5))\r\n",
+    "sns.factorplot(x='sample', y='normed_Ct', hue='dox', col='exo', data=normed_div_data[normed_div_data['primerset']=='interstitial-1'].dropna(), kind='bar')\r\n",
+    "#sns.barplot(x=['sample','exo'], y='normed_Ct', hue='dox', data=normed_div_data[normed_div_data['primerset']=='interstitial-1'])\r\n",
+    "plt.savefig('../img/interstitial_output.pdf')\r\n",
+    "plt.show() "
    ]
   },
   {
