Updated flow analysis chart to generate new plots

--- a/notebooks/t2.0_flow_analysis.ipynb
+++ b/notebooks/t2.0_flow_analysis.ipynb
@@ -230,6 +230,58 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "gated"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_df[:100]['mRuby2-A'] / plot_df[plot_df['dox']==0].groupby('condition').mean()['mRuby2-A']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.set_style('whitegrid')\r\n",
+    "plot_df = gated[(gated['mRuby2-A'] > 1) & (gated['eGFP-A'] > 1)].copy()\r\n",
+    "plot_df = plot_df[plot_df['condition'].apply(lambda x: x[0] == '2' or x[0] == '1')]\r\n",
+    "plot_df = plot_df[plot_df['dox'] < .15]\r\n",
+    "plot_df['dox'] /= plot_df['dox'].max()\r\n",
+    "norm_values = plot_df[plot_df['dox']==0].groupby('condition').mean()['mRuby2-A']\r\n",
+    "plot_df['normed-mRuby2-A'] = plot_df['mRuby2-A'] / norm_values['2-gene.Divergent']\r\n",
+    "sns.lineplot(data=plot_df[plot_df['condition'] != '1-gene'], x='dox', y='normed-mRuby2-A', hue='condition', linewidth=5, palette=main_condition_palette,legend=None)\r\n",
+    "#sns.lineplot(data=plot_df, x='dox', y='eGFP-A', hue='condition', ci=\"sd\", linewidth=5, palette=main_condition_palette, hue_order=[x for x in plot_order if x.startswith('2_gene')])\r\n",
+    "plt.ylabel('Reporter output')\r\n",
+    "plt.xlabel('Induction level') \r\n",
+    "plt.rcParams.update({'font.family': 'Helvetica Neue', 'font.size': 16})\r\n",
+    "#plt.legend(['Tandem', 'Divergent', 'Convergent'], loc='upper center')\r\n",
+    "plt.gca().grid(False)\r\n",
+    "plt.tick_params(axis='both', which='both', bottom=True, top=False, labelbottom=True, right=False, left=True, labelleft=True) \r\n",
+    "plt.xlim([0,1])\r\n",
+    "plt.ylim([0,1.5])\r\n",
+    "#plt.gca().legend_.set_bbox_to_anchor((1.25, .9))\r\n",
+    "#plt.savefig('../img/t2.0/sim_compare_{}.svg'.format(sc), bbox_inches='tight')\r\n",
+    "plt.savefig('../img/t2.0/experimental_output_curves.svg', bbox_inches='tight')\r\n",
+    "plt.show()\r\n",
+    "sns.displot(data=plot_df[plot_df['dox'] > 0.316], x='mRuby2-A', hue='condition', log_scale=True, kind='kde', linewidth=4, palette=main_condition_palette)\r\n",
+    "plt.xlabel('Reporter output') \r\n",
+    "plt.rcParams.update({'font.family': 'Helvetica Neue', 'font.size': 16})\r\n",
+    "plt.savefig('../img/t2.0/full_induction_densities.svg', bbox_inches='tight')\r\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "sns.set_style('whitegrid')\r\n",
     "plot_df = gated[(gated['mRuby2-A'] > 1) & (gated['eGFP-A'] > 1)].copy()\r\n",
     "filter_set = plot_df['dox'].unique()[1::2]\r\n",
