Updated notebooks with summary statistics plots

--- a/notebooks/t2.0_julia_summaries.ipynb
+++ b/notebooks/t2.0_julia_summaries.ipynb
@@ -180,6 +180,36 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Plot flow data mean, STD, CV, and Fano"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_df = simulation_df.copy()\r\n",
+    "plot_df = plot_df[(plot_df['topo_rate'] == min(plot_df['topo_rate'])) & (plot_df['is_plasmid'] == 1)  & (plot_df['induction'] < 0.008) & (plot_df['sc_dependent'] == 1.0)]\r\n",
+    "plot_df = plot_df.dropna()\r\n",
+    "# Normalize by the max value at induction = 0\r\n",
+    "plot_df['mRuby2'] /= np.mean(plot_df[plot_df['induction'] < 0.000084]['mRuby2'])\r\n",
+    "plot_df['induction'] /= np.max(plot_df['induction'])\r\n",
+    "mean_plot_data = plot_df.groupby(['condition', 'induction'])['mRuby2'].mean().rename('mean')\r\n",
+    "std_plot_data = plot_df.groupby(['condition', 'induction'])['mRuby2'].std().rename('std')\r\n",
+    "cv_plot_data = (std_plot_data / mean_plot_data).rename('cv')\r\n",
+    "fano_plot_data = (std_plot_data**2 / mean_plot_data).rename('fano')\r\n",
+    "plot_df = pd.concat([mean_plot_data, std_plot_data, cv_plot_data, fano_plot_data], axis=1).reset_index()\r\n",
+    "for label in ['mean', 'std', 'cv', 'fano']:\r\n",
+    "    sns.lineplot(data=plot_df, x='induction', y=label, hue='condition', linewidth=5, palette=main_condition_palette, hue_order=[x for x in plot_order if x.startswith('2_gene')])\r\n",
+    "    plt.savefig(f'../img/t2.0/simulation_summary_{label}.svg')\r\n",
+    "    plt.show()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -307,10 +337,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "35596c0d4d50b3cf51088ffaabe9a8701552f7de3deccc6f17efae06fe0a22a4"
+   "hash": "633f1c1c8320b313f5f886b41bd1fdc446650904a8aae9c7ea4880a02892af16"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.4 64-bit ('env': venv)",
+   "display_name": "Python 3.7.4 64-bit ('env': venv)",
    "name": "python3"
   },
   "language_info": {
@@ -323,7 +353,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.4"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
