--- a/notebooks/t2.0_flow_analysis.ipynb
+++ b/notebooks/t2.0_flow_analysis.ipynb
@@ -6,17 +6,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt\n",
-    "import h5py\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "\n",
-    "from pathlib import Path\n",
-    "import re\n",
-    "\n",
-    "import itertools\n",
-    "sns.set_style('whitegrid')\n",
+    "import seaborn as sns\r\n",
+    "import matplotlib.pyplot as plt\r\n",
+    "import h5py\r\n",
+    "import pandas as pd\r\n",
+    "import numpy as np\r\n",
+    "\r\n",
+    "from pathlib import Path\r\n",
+    "import re\r\n",
+    "\r\n",
+    "import itertools\r\n",
+    "sns.set_style('whitegrid')\r\n",
     "sns.set_context('talk',rc={'font.family': 'sans-serif', 'font.sans-serif':['Helvetica Neue']})"
    ]
   },
@@ -73,8 +73,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Count invalid Attune counts\n",
-    "print(np.sum((experimental['mRuby2-A'] < 0) | (experimental['eGFP-A'] < 0) | (experimental['iRFP670-A'] < 0)))\n",
+    "# Count invalid Attune counts\r\n",
+    "print(np.sum((experimental['mRuby2-A'] < 0) | (experimental['eGFP-A'] < 0) | (experimental['iRFP670-A'] < 0)))\r\n",
     "print(len(experimental))"
    ]
   },
@@ -84,12 +84,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Do postprocessing\n",
-    "experimental['mRuby2-normed'] = experimental['mRuby2-A'] / experimental['iRFP670-A']\n",
-    "experimental['eGFP-normed'] = experimental['eGFP-A'] / experimental['iRFP670-A']\n",
-    "gated = experimental[(experimental['iRFP670-A'] > 2e2) & np.array(['no-rTTa' not in x for x in experimental['condition']])]\n",
-    "camp_dox_titration['mRuby2-normed'] = camp_dox_titration['mRuby2-A'] / camp_dox_titration['iRFP670-A']\n",
-    "camp_dox_titration['eGFP-normed'] = camp_dox_titration['eGFP-A'] / camp_dox_titration['iRFP670-A']\n",
+    "# Do postprocessing\r\n",
+    "experimental['mRuby2-normed'] = experimental['mRuby2-A'] / experimental['iRFP670-A']\r\n",
+    "experimental['eGFP-normed'] = experimental['eGFP-A'] / experimental['iRFP670-A']\r\n",
+    "gated = experimental[(experimental['iRFP670-A'] > 2e2) & np.array(['no-rTTa' not in x for x in experimental['condition']])]\r\n",
+    "camp_dox_titration['mRuby2-normed'] = camp_dox_titration['mRuby2-A'] / camp_dox_titration['iRFP670-A']\r\n",
+    "camp_dox_titration['eGFP-normed'] = camp_dox_titration['eGFP-A'] / camp_dox_titration['iRFP670-A']\r\n",
     "gated_camp = camp_dox_titration[(camp_dox_titration['iRFP670-A'] > 2e2)]"
    ]
   },
@@ -99,21 +99,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "main_condition_palette = {\n",
-    "    '1-gene': '#808080',\n",
-    "    '2-gene.Tandem': '#A58245',\n",
-    "    '3-gene.Tandem': '#F1BE64',\n",
-    "    '2-gene.Divergent': '#18B7CE',\n",
-    "    '3-gene.Divergent': '#1DE2FF',\n",
-    "    '2-gene.Convergent': '#AC4140',\n",
-    "    '3-gene.Convergent': '#F85D5C',\n",
-    "}\n",
-    "light_background_palette = {k:v + '30' for k, v in main_condition_palette.items()}\n",
-    "plot_order = [\n",
-    "    '1-gene',\n",
-    "    '2-gene.Tandem', '3-gene.Tandem',\n",
-    "    '2-gene.Divergent', '3-gene.Divergent',\n",
-    "    '2-gene.Convergent', '3-gene.Convergent'\n",
+    "main_condition_palette = {\r\n",
+    "    '1-gene': '#808080',\r\n",
+    "    '2-gene.Tandem': '#A58245',\r\n",
+    "    '3-gene.Tandem': '#F1BE64',\r\n",
+    "    '2-gene.Divergent': '#18B7CE',\r\n",
+    "    '3-gene.Divergent': '#1DE2FF',\r\n",
+    "    '2-gene.Convergent': '#AC4140',\r\n",
+    "    '3-gene.Convergent': '#F85D5C',\r\n",
+    "}\r\n",
+    "light_background_palette = {k:v + '30' for k, v in main_condition_palette.items()}\r\n",
+    "plot_order = [\r\n",
+    "    '1-gene',\r\n",
+    "    '2-gene.Tandem', '3-gene.Tandem',\r\n",
+    "    '2-gene.Divergent', '3-gene.Divergent',\r\n",
+    "    '2-gene.Convergent', '3-gene.Convergent'\r\n",
     "]"
    ]
   },
@@ -277,6 +277,56 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Plot mean and CV expression values as a function of induction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.set_style('whitegrid')\r\n",
+    "plot_df = gated[(gated['mRuby2-A'] > 1) & (gated['eGFP-A'] > 1)].copy()\r\n",
+    "plot_df = plot_df[plot_df['dox'] < .15]\r\n",
+    "plot_df['dox'] /= plot_df['dox'].max()\r\n",
+    "\r\n",
+    "# Norm the expression values\r\n",
+    "norm_values = plot_df[plot_df['dox']==0].groupby('condition').mean()['mRuby2-A']\r\n",
+    "plot_df['mRuby2-normed'] = plot_df['mRuby2-A']\r\n",
+    "for c in ['2-gene.Convergent', '2-gene.Tandem', '2-gene.Divergent']:\r\n",
+    "    plot_df.loc[plot_df['condition'] == c, 'mRuby2-normed'] /= norm_values[c]\r\n",
+    "\r\n",
+    "plot_df = plot_df[plot_df['condition'].map(lambda x: x.startswith('2'))]\r\n",
+    "mean_series = plot_df.groupby(['condition', 'dox'])['mRuby2-normed'].mean()\r\n",
+    "mean_series.name = 'mean'\r\n",
+    "std_series = plot_df.groupby(['condition', 'dox'])['mRuby2-normed'].std()\r\n",
+    "std_series.name = 'std'\r\n",
+    "cv_series = std_series / mean_series\r\n",
+    "cv_series.name = 'cv'\r\n",
+    "fano_series = std_series**2 / mean_series\r\n",
+    "fano_series.name = 'fano'\r\n",
+    "sns.lineplot(data=plot_df, x='dox', y='mRuby2-normed', hue='condition', linewidth=5, ci=99.99, palette=main_condition_palette)\r\n",
+    "plt.gca().legend().remove()\r\n",
+    "plt.xlabel('Induction')\r\n",
+    "plt.ylabel('Reporter expression')\r\n",
+    "plt.savefig(f'../img/t2.0/real_mean.svg')\r\n",
+    "plt.show()\r\n",
+    "\r\n",
+    "plot_df = pd.concat([mean_series, std_series, cv_series, fano_series], axis=1).reset_index()\r\n",
+    "for label, textlabel in zip(['fano'], ['Fano factor']):\r\n",
+    "    sns.lineplot(data=plot_df, x='dox', y=label, hue='condition', linewidth=5, palette=main_condition_palette)\r\n",
+    "    plt.gca().legend().remove()\r\n",
+    "    plt.xlabel('Induction')\r\n",
+    "    plt.ylabel(textlabel)\r\n",
+    "    plt.savefig(f'../img/t2.0/real_{label}.svg')\r\n",
+    "    plt.show()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -422,15 +472,23 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "35596c0d4d50b3cf51088ffaabe9a8701552f7de3deccc6f17efae06fe0a22a4"
+   "hash": "633f1c1c8320b313f5f886b41bd1fdc446650904a8aae9c7ea4880a02892af16"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.4  ('env': venv)",
+   "display_name": "Python 3.7.4 64-bit ('env': venv)",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": ""
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
