Updated TMP analysis notebook

--- a/notebooks/TMP_qPCR.ipynb
+++ b/notebooks/TMP_qPCR.ipynb
@@ -183,6 +183,31 @@
     "    'water': 'K8-M8',\r\n",
     "    '-exo': 'B2-D10,E2-G7',\r\n",
     "    '+exo': 'H2-J10,K2-M7'\r\n",
+    "})\r\n",
+    "tan_con_test_mapping = plate_specification.well_mapping({\r\n",
+    "    'hActB': 'A1-A24,D1-D24,G1-G24,J1-J24,M1-M12',\r\n",
+    "    'BB-1': 'B1-B24,E1-E24,H1-H24,K1-K24,N1-N12',\r\n",
+    "    'interstitial-1': 'C1-C24,F1-F24,I1-I24,L1-L24,O1-O12',\r\n",
+    "    'direct-Tandem..': 'A1-C3,G7-I9',\r\n",
+    "    '-UV-Tandem.-Dox.': 'A4-C6,G10-I12',\r\n",
+    "    '-UV-Tandem.+Dox.': 'A7-C9,G13-I15',\r\n",
+    "    'direct-Convergent..': 'A10-C12,G16-I18',\r\n",
+    "    '-UV-Convergent.-Dox.': 'A13-C15,G19-I21',\r\n",
+    "    '-UV-Convergent.+Dox.': 'A16-C18,G22-I24',\r\n",
+    "    'Tandem.-Dox.1': 'A19-C21,J1-L3',\r\n",
+    "    'Tandem.-Dox.2': 'A22-C24,J4-L6',\r\n",
+    "    'Tandem.-Dox.3': 'D1-F3,J7-L9',\r\n",
+    "    'Tandem.+Dox.1': 'D4-F6,J10-L12',\r\n",
+    "    'Tandem.+Dox.2': 'D7-F9,J13-L15',\r\n",
+    "    'Tandem.+Dox.3': 'D10-F12,J16-L18',\r\n",
+    "    'Convergent.-Dox.1': 'D13-F15,J19-L21',\r\n",
+    "    'Convergent.-Dox.2': 'D16-F18,J22-L24',\r\n",
+    "    'Convergent.-Dox.3': 'D19-F21,M1-O3',\r\n",
+    "    'Convergent.+Dox.1': 'D22-F24,M4-O6',\r\n",
+    "    'Convergent.+Dox.2': 'G1-I3,M7-O9',\r\n",
+    "    'Convergent.+Dox.3': 'G4-I6,M10-O12',\r\n",
+    "    '-exo': 'A1-F24,G1-I6',\r\n",
+    "    '+exo': 'G7-L24,J1-O12'\r\n",
     "})"
    ]
   },
@@ -193,7 +218,9 @@
    "outputs": [],
    "source": [
     "div_test_data = map_qPCR_data('../data/TMP_qPCR/2021.07.16-Divergent-TMP.txt', divergent_test_mapping, ['primerset', 'sample', 'dox', 'exo'])\r\n",
-    "div_test_data['full_condition'] = div_test_data['sample'] + '.' + div_test_data['dox'] + '.' + div_test_data['exo']"
+    "div_test_data['full_condition'] = div_test_data['sample'] + '.' + div_test_data['dox'] + '.' + div_test_data['exo']\r\n",
+    "tan_con_test_data = map_qPCR_data('../data/TMP_qPCR/2021.08.11-Tandem_Convergent.txt', tan_con_test_mapping, ['primerset', 'sample', 'dox', 'rep', 'exo'])\r\n",
+    "tan_con_test_data['full_condition'] = tan_con_test_data['sample'] + '.' + tan_con_test_data['dox'] + '.' + tan_con_test_data['rep'] + tan_con_test_data['exo']"
    ]
   },
   {
@@ -204,7 +231,9 @@
    "source": [
     "plt.figure(figsize=(35,5))\r\n",
     "sns.barplot(x='full_condition', y='Ct', hue='primerset', data=div_test_data)\r\n",
-    "plt.savefig('../img/pre_normalize.pdf')\r\n",
+    "plt.show()\r\n",
+    "plt.figure(figsize=(120,5))\r\n",
+    "sns.barplot(x='full_condition', y='Ct', hue='primerset', data=tan_con_test_data)\r\n",
     "plt.show()"
    ]
   },
@@ -270,7 +299,86 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "normed_orientation['rep'].map(str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "orientation_comparison"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "orientation_comparison = pd.concat([div_test_data,tan_con_test_data])\r\n",
+    "orientation_comparison.loc[orientation_comparison['rep'].isna(), 'rep'] = 1\r\n",
+    "orientation_comparison = orientation_comparison.copy().groupby(['sample', 'dox', 'rep', 'exo', 'primerset']).median()\r\n",
+    "#normed_orientation = orientation_comparison['Ct'] - orientation_comparison.xs('+exo', level='exo').xs('BB-1', level='primerset')['Ct']\r\n",
+    "print(orientation_comparison)\r\n",
+    "normed_orientation = orientation_comparison['Ct'] - orientation_comparison.xs('BB-1', level='primerset')['Ct']\r\n",
+    "normed_orientation = normed_orientation.reset_index()\r\n",
+    "normed_orientation = normed_orientation[normed_orientation['sample'].map(lambda x: x[0] in ['T', 'C', 'D'])]\r\n",
+    "orientation_comparison = orientation_comparison.reset_index()\r\n",
+    "orientation_comparison['samplerep'] = orientation_comparison['sample'] + '-' + orientation_comparison['rep'].map(str)\r\n",
+    "normed_orientation['samplerep'] = normed_orientation['sample'] + '-' + normed_orientation['rep'].map(str)\r\n",
+    "orientation_comparison = orientation_comparison[orientation_comparison['sample'].map(lambda x: x[0] in ['T', 'C', 'D'])]\r\n",
+    "normed_orientation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "orientation_comparison"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.catplot(x='samplerep', y='Ct', hue='dox', hue_order=['-Dox','+Dox'], row='primerset', col='exo', height=7, aspect=1, data=normed_orientation, kind='bar')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\r\n",
+    "#orientation_comparison = orientation_comparison.copy().groupby(['sample','dox','exo','primerset','rep']).median()\r\n",
+    "\"\"\"\r\n",
+    "normed_orientation_compar\r\n",
+    "normed_div_data = div_test_data.copy().groupby(['sample','dox','exo','primerset']).median()\r\n",
+    "average_exo_reduction = normed_div_data.xs('+exo', level='exo')['Ct'] - normed_div_data.xs('-exo', level='exo')['Ct']\r\n",
+    "# Use the -exo condition with the backbone primer to normalize for plasmid concentration. Adjust all Ct's accordingly.\r\n",
+    "normed_div_data['normed_Ct'] = normed_div_data['Ct'] - normed_div_data.xs('-exo', level='exo').xs('BB-1', level='primerset')['Ct']\r\n",
+    "dox_changes = normed_div_data.xs('+Dox', level='dox')['normed_Ct'] - normed_div_data.xs('-Dox', level='dox')['normed_Ct']\r\n",
+    "normed_div_data = normed_div_data.reset_index()\r\n",
+    "normed_div_data['full_condition'] = normed_div_data['sample'] + '.' + normed_div_data['dox'] + '.' + normed_div_data['exo']\r\n",
+    "print(f'Average exo fold reduction: {2**average_exo_reduction.mean():.2f}')\r\n",
+    "normed_div_data = div_test_data.copy().groupby(['sample','dox','exo','primerset']).median()\r\n",
+    "\"\"\""
+   ]
   }
  ],
  "metadata": {
