--- a/notebooks/TMP_qPCR.ipynb
+++ b/notebooks/TMP_qPCR.ipynb
@@ -151,7 +151,10 @@
     "sns.scatterplot(x='replicate', y='Ct', hue='primerset', data=exo_norm_df[exo_norm_df['condition']=='tandem.-dox.'])\r\n",
     "plt.show()\r\n",
     "plt.figure()\r\n",
-    "sns.scatterplot(x='hActB', y='BB-1', data=cross_df)"
+    "sns.scatterplot(x='hActB', y='BB-1', data=cross_df)\r\n",
+    "plt.xlabel('hActB Ct ($-\\log_2(c)$)')\r\n",
+    "plt.ylabel('Backbone Ct ($-\\log_2(c)$)')\r\n",
+    "plt.savefig('../img/pre_dilute_qPCR_comparison.svg')"
    ]
   },
   {
@@ -321,8 +324,6 @@
     "orientation_comparison = pd.concat([div_test_data,tan_con_test_data])\r\n",
     "orientation_comparison.loc[orientation_comparison['rep'].isna(), 'rep'] = 1\r\n",
     "orientation_comparison = orientation_comparison.copy().groupby(['sample', 'dox', 'rep', 'exo', 'primerset']).median()\r\n",
-    "#normed_orientation = orientation_comparison['Ct'] - orientation_comparison.xs('+exo', level='exo').xs('BB-1', level='primerset')['Ct']\r\n",
-    "print(orientation_comparison)\r\n",
     "normed_orientation = orientation_comparison['Ct'] - orientation_comparison.xs('BB-1', level='primerset')['Ct']\r\n",
     "normed_orientation = normed_orientation.reset_index()\r\n",
     "normed_orientation = normed_orientation[normed_orientation['sample'].map(lambda x: x[0] in ['T', 'C', 'D'])]\r\n",
@@ -330,7 +331,65 @@
     "orientation_comparison['samplerep'] = orientation_comparison['sample'] + '-' + orientation_comparison['rep'].map(str)\r\n",
     "normed_orientation['samplerep'] = normed_orientation['sample'] + '-' + normed_orientation['rep'].map(str)\r\n",
     "orientation_comparison = orientation_comparison[orientation_comparison['sample'].map(lambda x: x[0] in ['T', 'C', 'D'])]\r\n",
-    "normed_orientation"
+    "grid = sns.catplot(x='samplerep', y='Ct', hue='dox', hue_order=['-Dox','+Dox'], row='primerset', col='exo', height=7, aspect=1,\r\n",
+    "                   data=normed_orientation[(\r\n",
+    "                       normed_orientation['primerset']=='interstitial-1') &\r\n",
+    "                       (normed_orientation['exo']=='+exo')], kind='bar')\r\n",
+    "for axis in grid.axes.flat:\r\n",
+    "    axis.set_ylabel('$\\log_2$(positive supercoiling)')\r\n",
+    "plt.savefig('../img/direct_normed.svg')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "orientation_comparison = pd.concat([div_test_data,tan_con_test_data])\r\n",
+    "orientation_comparison.loc[orientation_comparison['rep'].isna(), 'rep'] = 1\r\n",
+    "orientation_comparison = orientation_comparison.copy().groupby(['sample', 'dox', 'rep', 'exo', 'primerset']).median()\r\n",
+    "normed_orientation = orientation_comparison['Ct'] - orientation_comparison.xs('+exo', level='exo').xs('hActB', level='primerset')['Ct']\r\n",
+    "normed_orientation = normed_orientation.reset_index()\r\n",
+    "normed_orientation = normed_orientation[normed_orientation['sample'].map(lambda x: x[0] in ['T', 'C', 'D'])]\r\n",
+    "orientation_comparison = orientation_comparison.reset_index()\r\n",
+    "orientation_comparison['samplerep'] = orientation_comparison['sample'] + '-' + orientation_comparison['rep'].map(str)\r\n",
+    "normed_orientation['samplerep'] = normed_orientation['sample'] + '-' + normed_orientation['rep'].map(str)\r\n",
+    "orientation_comparison = orientation_comparison[orientation_comparison['sample'].map(lambda x: x[0] in ['T', 'C', 'D'])]\r\n",
+    "grid = sns.catplot(x='samplerep', y='Ct', hue='dox', hue_order=['-Dox','+Dox'], row='primerset', col='exo', height=7, aspect=1,\r\n",
+    "                   data=normed_orientation[(\r\n",
+    "                       normed_orientation['primerset']=='interstitial-1') &\r\n",
+    "                       (normed_orientation['exo']=='+exo')], kind='bar')\r\n",
+    "for axis in grid.axes.flat:\r\n",
+    "    axis.set_ylabel('$\\log_2$(positive supercoiling)')\r\n",
+    "plt.savefig('../img/actB_normed.svg')\r\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "orientation_comparison = pd.concat([div_test_data,tan_con_test_data])\r\n",
+    "orientation_comparison.loc[orientation_comparison['rep'].isna(), 'rep'] = 1\r\n",
+    "orientation_comparison = orientation_comparison.copy().groupby(['sample', 'dox', 'rep', 'exo', 'primerset']).median()\r\n",
+    "normed_orientation = orientation_comparison['Ct'] - orientation_comparison.xs('-exo', level='exo').xs('hActB', level='primerset')['Ct']\r\n",
+    "normed_orientation = normed_orientation.reset_index()\r\n",
+    "normed_orientation = normed_orientation[normed_orientation['sample'].map(lambda x: x[0] in ['T', 'C', 'D'])]\r\n",
+    "orientation_comparison = orientation_comparison.reset_index()\r\n",
+    "orientation_comparison['samplerep'] = orientation_comparison['sample'] + '-' + orientation_comparison['rep'].map(str)\r\n",
+    "normed_orientation['samplerep'] = normed_orientation['sample'] + '-' + normed_orientation['rep'].map(str)\r\n",
+    "orientation_comparison = orientation_comparison[orientation_comparison['sample'].map(lambda x: x[0] in ['T', 'C', 'D'])]\r\n",
+    "grid = sns.catplot(x='samplerep', y='Ct', hue='dox', hue_order=['-Dox','+Dox'], row='primerset', col='exo', height=7, aspect=1,\r\n",
+    "                   data=normed_orientation[(\r\n",
+    "                       normed_orientation['primerset']=='interstitial-1') &\r\n",
+    "                       (normed_orientation['exo']=='+exo')], kind='bar')\r\n",
+    "for axis in grid.axes.flat:\r\n",
+    "    axis.set_ylabel('$\\log_2$(positive supercoiling)')\r\n",
+    "plt.savefig('../img/-exo_normed.svg')\r\n",
+    "plt.show()"
    ]
   },
   {
@@ -347,9 +406,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "sns.catplot(x='samplerep', y='Ct', hue='dox', hue_order=['-Dox','+Dox'], row='primerset', col='exo', height=7, aspect=1, data=normed_orientation, kind='bar')"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -383,10 +440,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "633f1c1c8320b313f5f886b41bd1fdc446650904a8aae9c7ea4880a02892af16"
+   "hash": "35596c0d4d50b3cf51088ffaabe9a8701552f7de3deccc6f17efae06fe0a22a4"
   },
   "kernelspec": {
-   "display_name": "Python 3.7.4 64-bit ('env': venv)",
+   "display_name": "Python 3.9.4 64-bit ('env': venv)",
    "name": "python3"
   },
   "language_info": {
@@ -399,7 +456,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.9.4"
   }
  },
  "nbformat": 4,
