Updated Manifest with packages needed for plotting 10.521 model
Bumped package versions and added StochasticToggleModel submodule

Bump pillow from 8.2.0 to 8.3.2

Bumps [pillow](https://github.com/python-pillow/Pillow) from 8.2.0 to 8.3.2.
- [Release notes](https://github.com/python-pillow/Pillow/releases)
- [Changelog](https://github.com/python-pillow/Pillow/blob/master/CHANGES.rst)
- [Commits](https://github.com/python-pillow/Pillow/compare/8.2.0...8.3.2)

---
updated-dependencies:
- dependency-name: pillow
  dependency-type: direct:production
...

Signed-off-by: dependabot[bot] <support@github.com>

--- a/notebooks/t2.0_flow_analysis.ipynb
+++ b/notebooks/t2.0_flow_analysis.ipynb
@@ -313,7 +313,7 @@
     "plt.gca().legend().remove()\r\n",
     "plt.xlabel('Induction')\r\n",
     "plt.ylabel('Reporter expression')\r\n",
-    "plt.savefig(f'../img/t2.0/real_mean.svg')\r\n",
+    "plt.savefig(f'../img/t2.0/real_mean.svg', bbox_inches='tight')\r\n",
     "plt.show()\r\n",
     "\r\n",
     "plot_df = pd.concat([mean_series, std_series, cv_series, fano_series], axis=1).reset_index()\r\n",
@@ -322,7 +322,7 @@
     "    plt.gca().legend().remove()\r\n",
     "    plt.xlabel('Induction')\r\n",
     "    plt.ylabel(textlabel)\r\n",
-    "    plt.savefig(f'../img/t2.0/real_{label}.svg')\r\n",
+    "    plt.savefig(f'../img/t2.0/real_{label}.svg', bbox_inches='tight')\r\n",
     "    plt.show()"
    ]
   },
